# vomero_sandbox

./: README.md  pyproject.toml
examples/: README.md  _timing.py  cleanup_and_leaks.py  env_vars.py  hardening.py  input_files.py  input_output_cycle.py  isolation_and_state.py  output_files.py  queue_consumer.py  quickstart.py  run_project.py  runtime_example.py  sessions_and_checkpoints.py  stateful_agent.py  streaming.py  stress_client.py  stress_server.py  use_in_service.py
examples/package_registry/stats/: __main__.py  compute.py
examples/package_registry/wordcount/: __main__.py
examples/sample_project/app/: __init__.py  __main__.py  stats.py
examples/sandbox-image/: Dockerfile
src/vomero_sandbox/: __init__.py  _exec.py  _pod.py  config.py  errors.py  models.py  runner.py
tests/: README.md  smoke_idle_shutdown.py
