[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vomero_sandbox"
version = "0.1.0"
description = "Run untrusted code in hardened, isolated Kubernetes sandboxes."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "kubernetes>=27.0.0",
]

[project.optional-dependencies]
# Integration smoke tests (tests/) are standalone-runnable, but this lets you
# `pip install -e .[test]` to run them under pytest too. They need a cluster.
test = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vomero_sandbox"]
